<resources>
    <string name="app_name">ClubCalender</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="blank">Defualt value</string>
    <string name="location">Location</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="duration">Duration</string>
    <string name="duration_unspecified">0 min</string>
    <string name="date">Date</string>
    <string name="club">Club</string>
    <string name="title_activity_event_detail">EventDetail</string>
    <string name="title_activity_test">test</string>
    <string name="time_unspecified">Please select a time</string>
    <string name="date_unspecified">Please select a date</string>
    <string name="repeats_weekly">Repeats weekly</string>
    <string name="club_unspecified">Please select a club</string>
    <string name="title_activity_create_event">CreateEvent</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="club_list">Displayed clubs</string>
    <string name="dialog_title_update_club_list">Please select clubs you would like to see events for:</string>
    <string name="CreateEventClubDialogTittle">Please select a club</string>
    <string name="Dateformat">%d/%d/%d</string>
    <string name="toast_name">event must have a name</string>
    <string-array name="all_clubs">
        <item>Board Game Club</item>
        <item>Volleyball Club</item>
        <item>Anime Club</item>
        <item>MakerLab</item>
        <item>D&amp;D</item>
    </string-array>
</resources>
